--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ activityCompose = "1.11.0"
 composeBom = "2025.11.00"
 material3 = "1.5.0-alpha08"
 navigationCompose = "2.9.6"
-kspVersion = "2.2.21-2.0.4"
+kspVersion = "2.3.2"
 hiltVersion = "2.57.1"
 hiltCompilerVersion = "1.2.0"
 composeHiltNavigationVersion = "1.2.0"
